# archlinux

./: .gitignore  Cargo.toml  Dioxus.toml  new  run  server.ts
docker/: Dockerfile.debian  Dockerfile.fedora
public/: bash.js
public/style/: style.css
src/: main.rs  style.scss
src/components/: mod.rs
src/components/alphabetical_column/: front.rs  style.scss
src/components/colored_text/: front.rs  style.scss
src/components/rectbutton/: front.rs  style.scss
src/layout/: mod.rs
src/layout/app_layout/: front.rs  style.scss
src/layout/header/: front.rs  style.scss
src/pages/: mod.rs  style.scss
src/pages/home/: community.rs  front.rs  logo.rs  mod.rs  packages.rs  style.scss  wiki.rs
src/pages/wiki/: common.scss  front.rs  mod.rs  style.scss
src/pages/wiki/category/: front.rs  style.scss  v.html
src/shared/: structs.rs
src/style/: constants.scss  style.scss
src/utils/: switch_theme.rs
