[package]
name = "archlinux"
version = "0.1.0"
authors = ["tkirishima <tkirishima@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["router", "fullstack"] }
# dioxus = { version = "0.5.0", features = ["router"] }
# dioxus-fullstack = { version = "0.5.0" }
dioxus-free-icons = { version = "0.8.3", features = ["ionicons"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
reqwest = "0.12.2"
tl = "0.7.8"
regex = "1.10.4"
tokio =  "1.37.0"
async-std = "1.12.0"


[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
